src/objects/vehicle__c.object
<CustomObject>
    <fields>
        <fullName>ADD_TEST__c</fullName>
        <label>ADD_TEST</label>
        <summaryForeignKey>Campsite__c.vehicle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>vehicle</label>
    <listViews>
        <fullName>Active_vehicles</fullName>
        <columns>NAME</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active vehicles</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rule1</fullName>
        <active>false</active>
        <errorConditionFormula>Inactive__c  &lt;&gt; False</errorConditionFormula>
        <errorMessage>Record cannot be updated</errorMessage>
    </validationRules>
</CustomObject>